[package]
name = "regressor-in-rust"
version = "0.1.0"
authors = ["Vlad Orlov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smartcore = { version = "0.1.0", features=["nalgebra-bindings"]}
nalgebra = { version="0.22.0", features = ["serde-serialize"]}